# ructf-2018

./: README.md
ansible/: cloud_master.yaml  cloud_node.yaml  inventory.cfg
checkers/Hologram/: checker.py  holograms_api.py  requirements.txt  ws_helper.py
checkers/eloquent/: NAMES  bullshit_generator.py  checker-server.py  checker.py  checker_server.py  eloquent.checker.py  generators.py  main.py  parser.py  service_api.py  usersd.py  war_and_peace.txt
checkers/lifesim/: TextGenerator.py  checker.py  lifesim.checker.py  networking.py  user-agents
checkers/nodbrary/: EC.py  Untitled0.ipynb  nodbrary.checker.py  requirements.txt  result.csv  utils.py
checkers/ribbons/: checker_api.py  ribbons.checker.py  ribbons_api.py
checkers/thinkerer/: .gitignore  get_checker.sh
cs/: cs-checkers.yml
cs/group_vars/: cs
deploy/: cloud-init.sh  config.py  deploy-docker-containers.sh  deploy.sh  deploy_hologram.sh  deploy_services.py  hologram.nginxconf  install-docker.sh  rename-interface.sh  sources.list
services/BulletinBoard/: BulletinBoard.sln
services/Hologram/: Hologram.sln
services/eloquent/: .gitignore  Dockerfile  config.py  db.py  docker-compose.yml  requirements.txt  reset.sh  sessions.py  start.py  utils.py  webserver.py  writeup.md
services/ribbons/: CMakeLists.txt  Dockerfile  cache.c  cache.h  cli.c  cli.h  constants.h  crypto.c  crypto.h  docker-compose.yml  frontend.c  frontend.h  httpserver.c  httpserver.h  main.c  ribbons.conf  routes.c  routes.h  storage.c  storage.h  types.c  types.h
services/ribbons/static/: index.css  index.html  index.js
(+371 files in other folders)
